<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sign Up Form</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username:</string>
    <string name="enter_username">Please enter your username</string>
    <string name="submit">SUBMIT</string>
    <string name="password">Password:</string>
    <string name="enter_password">Please enter a password</string>
    <string name="confirm">Confirm:</string>
    <string name="enter_confirmation">Please confirm your password</string>
    <string name="random">Random</string>




</resources>
